Better channels lists overflow. Fixes #135

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -182,6 +182,10 @@ html, body, .container {
     display: block;
 }
 
+.network-channels.collapse:not(.in) {
+    overflow: hidden;
+}
+
 .group-users {
     display: block;
     overflow: visible;
